@@ -68,7 +68,10 @@ src_regexxer_SOURCES =		\
 nodist_src_regexxer_SOURCES =	\
 	ui/stockimages.h
 
-global_defs = -DREGEXXER_LOCALEDIR=\""$(localedir)"\" -DREGEXXER_PKGDATADIR=\""$(pkgdatadir)"\"
+# The location of the gettext catalogs as defined by intltool.
+rxlocaledir = $(prefix)/$(DATADIRNAME)/locale
+
+global_defs = -DREGEXXER_LOCALEDIR=\""$(rxlocaledir)"\" -DREGEXXER_PKGDATADIR=\""$(pkgdatadir)"\"
 AM_CPPFLAGS = $(global_defs) -I$(top_builddir) $(REGEXXER_MODULES_CFLAGS) $(REGEXXER_WARNING_FLAGS)
 
 src_regexxer_DEPENDENCIES = src/exported-symbols
